Ticket #1405: Fixing line height of fontawesome more / youtube icon was mis-aligned.

--- a/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
@@ -8389,7 +8389,7 @@ body.widgets #main #content #content-inner {
 #widgets .elsewhere ul li span.icon-youtube:before {
   font-family: "FontAwesomeSocial";
   font-size: 25px;
-  line-height: 25px;
+  line-height: inherit;
   color: #9d261d;
   margin: 0 5.5px;
   -webkit-font-smoothing: antialiased;
