--- a/drupal/sites/all/themes/checkdesk/assets/extensions/bowerbird/stylesheets/bowerbird/icons/_icons.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/extensions/bowerbird/stylesheets/bowerbird/icons/_icons.scss
@@ -77,7 +77,7 @@ $large-icon-font-size: 18px;
 
     // 3. basic layout
     font-size: $size;
-    line-height: $size;
+    line-height: inherit;
     color: $color;
     margin: 0 $gutter-width/2;
     -webkit-font-smoothing: antialiased;
